--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Spotit_Ads</title>
     <style>
         body {
-            background-color: #f1f1f1; /* Light background for contrast */
+            background-color: #CC338B; /* Light background for contrast */
             display: flex;
             justify-content: center;
             align-items: center;
