--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Spotit_Ads</title>
     <style>
         body {
-            background-color: #FF1493; /* Light background for contrast */
+            background-color: #f5f5f5; /* Light background for contrast */
             margin: 0; /* Remove default margin */
         }
         .title {
@@ -21,10 +21,32 @@
             position: absolute; /* Positioning */
             top: 0; /* Align to top */
         }
+        .nav {
+            display: flex; /* Flexbox layout */
+            justify-content: space-around; /* Space out items */
+            background-color: #fff; /* White background for nav */
+            padding: 20px 0; /* Padding for nav */
+            border-top: 2px solid black; /* Top border */
+            position: absolute; /* Positioning */
+            top: 80px; /* Adjust to be below title */
+            width: 100%; /* Full width */
+            box-sizing: border-box; /* Include padding in width calculation */
+        }
+        .nav div {
+            font-size: 20px; /* Font size for nav items */
+            color: #333; /* Text color */
+        }
     </style>
 </head>
 <body>
     <div class="title">Spotit_Ads</div>
+    <div class="nav">
+        <div>About Us</div>
+        <div>Our Services</div>
+        <div>Contacts</div>
+        <div>Pricing</div>
+    </div>
 </body>
 </html>
+
 
