--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             background-color: #f5f5f5; /* Light background for contrast */
             margin: 0; /* Remove default margin */
+            font-family: Arial, sans-serif; /* Set a default font */
         }
         .title {
             background-color: darkpink; /* Dark pink background */
@@ -18,8 +19,6 @@
             text-align: center;
             width: 100%; /* Full width */
             box-sizing: border-box; /* Include border in width calculation */
-            position: absolute; /* Positioning */
-            top: 0; /* Align to top */
         }
         .nav {
             display: flex; /* Flexbox layout */
@@ -27,14 +26,14 @@
             background-color: #fff; /* White background for nav */
             padding: 20px 0; /* Padding for nav */
             border-top: 2px solid black; /* Top border */
-            position: absolute; /* Positioning */
-            top: 80px; /* Adjust to be below title */
             width: 100%; /* Full width */
             box-sizing: border-box; /* Include padding in width calculation */
+            margin-top: 0; /* Ensure no margin */
         }
         .nav div {
             font-size: 20px; /* Font size for nav items */
             color: #333; /* Text color */
+            text-align: center; /* Center text */
         }
     </style>
 </head>
@@ -48,5 +47,6 @@
     </div>
 </body>
 </html>
+
 
 
