--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Spotit_Ads</title>
     <style>
         body {
-            background-color: #f5f5f5; /* Light background for contrast */
+            background-color: #C71585; /* Light background for contrast */
             margin: 0; /* Remove default margin */
             font-family: Arial, sans-serif; /* Set a default font */
         }
