--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .nav {
             display: flex; /* Flexbox layout */
             justify-content: space-around; /* Space out items */
-            background-color: #fff; /* White background for nav */
+            background-color: #C71585; /* White background for nav */
             padding: 20px 0; /* Padding for nav */
             border-top: 2px solid black; /* Top border */
             width: 100%; /* Full width */
@@ -32,7 +32,7 @@
         }
         .nav div {
             font-size: 20px; /* Font size for nav items */
-            color: #333; /* Text color */
+            color: #C71585; /* Text color */
             text-align: center; /* Center text */
         }
     </style>
