--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         .nav div {
             font-size: 20px; /* Font size for nav items */
-            color: #C71585; /* Text color */
+            color: #f1f1f1; /* Text color */
             text-align: center; /* Center text */
         }
     </style>
