--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .nav {
             display: flex; /* Flexbox layout */
             justify-content: space-around; /* Space out items */
-            background-color: #fff; /* White background for nav */
+            background-color: #000000; /* White background for nav */
             padding: 20px 0; /* Padding for nav */
             border-top: 2px solid black; /* Top border */
             width: 100%; /* Full width */
